# rag-bot

./: .dockerignore  .env.template  .gitignore  Dockerfile  Dockerfile.pg  README.md  chromadb.env  clean_data.py  docker-compose.yaml  load_pdf.py  main.py  pyproject.toml  query.py  requirements.txt  serve.py
.github/workflows/: ci.yml
scripts/: model_setup.sh  prestart.sh
src/: clean_data.py  evaluate.ipynb  load_pdf.py  query.py  serve.py
src/agent/graphs/: __init__.py  chat_agent.py  nodes.py  states.py
src/agent/rag_components/: __init__.py  llm.py  prompt.py  tools.py
src/app/: connect_db.py  init_db.py  model_download.py
src/app/core/: __init__.py  config.py  db.py  storage.py
src/app/models/: __init__.py  datatypes.py  models.py
src/config/: __init__.py  config.py
src/core/: __init__.py  config.py  db.py  storage.py
src/datatypes/: __init__.py  datatypes.py
src/evaluation/: agent_answer.json  knowledge_base.jsonl  knowledge_base_meta.json  metrics.json  metrics_results.json  report.html  report_details.json  test-set.jsonl  testset.jsonl
src/evaluation/post-processed/: processed-testset.json
src/evaluation/pre-processed/: test-set.jsonl
src/models/: models.py
src/operations/: __init__.py  chromadb_operations.py  directory_operations.py  handle_chunks.py
src/pipelines/: __init__.py  chunking.py  embedding_process.py  extract_from_pdf.py  handle_query.py  response_generating.py
src/upload_pdfs/: __init__.py  extract_from_pdf.py  utils.py
src/utils/: __init__.py  chunk_utils.py  directory_utils.py  embeddings.py
(+41 files in other folders)
